cfn_benchmark/cfn_templates/iksena__llm-iac-data-analysis/template/deepseek-chat/row_127_update_14_template_20250509_181305.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'CloudFormation template for creating an Amazon EFS file system with required network resources'

Parameters:
  AvailabilityZone:
    Type: AWS::EC2::AvailabilityZone::Name
    Description: The availability zone for the subnet
    Default: ''

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true

  Subnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: !If [HasAvailabilityZone, !Ref AvailabilityZone, !Select [0, !GetAZs '']]
      Tags:
        - Key: Name
          Value: EFS-Subnet

  InternetGateway:
    Type: AWS::EC2::InternetGateway

  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC

  Route:
    Type: AWS::EC2::Route
    DependsOn: VPCGatewayAttachment
    Properties:
      RouteTableId: !Ref RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  SubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref Subnet
      RouteTableId: !Ref RouteTable

  EFSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for EFS access
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 2049
          ToPort: 2049
          CidrIp: 10.0.0.0/16

  EFSFileSystem:
    Type: AWS::EFS::FileSystem
    Properties:
      PerformanceMode: generalPurpose
      ThroughputMode: bursting
      Encrypted: true
      LifecyclePolicies:
        - TransitionToIA: AFTER_30_DAYS

  EFSMountTarget:
    Type: AWS::EFS::MountTarget
    Properties:
      FileSystemId: !Ref EFSFileSystem
      SubnetId: !Ref Subnet
      SecurityGroups:
        - !GetAtt EFSSecurityGroup.GroupId

Conditions:
  HasAvailabilityZone: !Not [!Equals [!Ref AvailabilityZone, '']]

Outputs:
  FileSystemId:
    Description: The ID of the created EFS file system
    Value: !Ref EFSFileSystem
  MountTargetId:
    Description: The ID of the mount target
    Value: !Ref EFSMountTarget
  SecurityGroupId:
    Description: The ID of the security group created for EFS access
    Value: !Ref EFSSecurityGroup
  VPCId:
    Description: The ID of the created VPC
    Value: !Ref VPC
  SubnetId:
    Description: The ID of the created subnet
    Value: !Ref Subnet
